# gen-contract

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cabal.project
.github/workflows/: ci.yml  dhall.yml  docs.yaml  release.yml
dhall/: Project.dhall  module.dhall  package.dhall
haskell/: pgenie-gen.cabal
haskell/model-test/: Main.hs
pages/: index.html
src/: package.dhall
