cabal-version: 3.4
name: pgenie-gen-contract
version: 0
synopsis: pGenie generator contract Dhall schema and Haskell model projection
description:
  Minimal independently versioned repository containing only the pGenie
  generator contract: the Dhall schema and its Haskell model projection,
  plus a small integration test that verifies the two stay synchronized.
homepage: https://github.com/pgenie-io/gen-contract
bug-reports: https://github.com/pgenie-io/gen-contract/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov

source-repository head
  type: git
  location: https://github.com/pgenie-io/gen-contract

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    PGenieGen.Model.Input
    PGenieGen.Model.Output

  other-modules:
    PGenieGen.Dhall.Deriving
    PGenieGen.Dhall.Orphans
    PGenieGen.Dhall.Orphans.NonEmpty
    PGenieGen.Model.Input.Name
    PGenieGen.Prelude

  build-depends:
    base,
    dhall ^>=1.42.3,
    text,

test-suite model-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: model-test
  main-is: Main.hs
  other-modules:
  build-depends:
    base,
    containers,
    dhall ^>=1.42.3,
    either,
    hspec >=2.11 && <3,
    pgenie-gen-contract,
    text,
